<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="255dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pink"
        app:cardBackgroundColor="@color/colorMainGreen"
        app:cardCornerRadius="34dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="30dp">

            <ImageView
                android:id="@+id/imageViewMSABackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageViewMSAProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/img_charlie_profile"
                app:layout_constraintEnd_toStartOf="@+id/textViewMSAName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewMSAName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charlie_kelly"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/imageViewMSAProfile"
                app:layout_constraintTop_toTopOf="@id/imageViewMSAProfile" />
            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/textViewMSAName"
                app:layout_constraintStart_toStartOf="@id/textViewMSAName"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCASearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_a_message"
        app:endIconDrawable="@drawable/ic_message"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_conversation"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>