<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- backgrounds -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR2Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="-0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR2Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR2End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR2Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.8" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rectangle_2"
        android:rotation="-45"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/guidelineHPAR2Top"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHPAR2Bottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineHPAR2End"
        app:layout_constraintStart_toStartOf="@id/guidelineHPAR2Start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR4Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="-0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR4Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR4End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR4Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.8" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rectangle_5"
        android:rotation="-45"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/guidelineHPAR4Top"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHPAR4Bottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineHPAR4End"
        app:layout_constraintStart_toStartOf="@id/guidelineHPAR4Start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR17Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="-0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR17Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR17End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHPAR17Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.8" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rectangle_5"
        android:rotation="-45"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHPAR17Bottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineHPAR17End"
        app:layout_constraintStart_toStartOf="@id/guidelineHPAR17Start"
        app:layout_constraintTop_toTopOf="@id/guidelineHPAR17Top" />

    <!-- -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePABackTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePABackStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@id/guidelinePABackStart"
        app:layout_constraintTop_toTopOf="@id/guidelinePABackTop"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePAScrollTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guidelinePAScrollTop"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageViewPAProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_account_profile"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe_mail"
                android:textColor="#4E4E4E"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutPAHeaders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/textViewPAPostHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textColor="#656565"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewPAFollowersHeader"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPAFollowersHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="#656565"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewPAFollowsHeader"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewPAPostHeader"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPAFollowsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follows"
                    android:textColor="#656565"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewPAFollowersHeader"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutPAHeaderContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textViewPAPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="35"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewPAFollowers"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPAFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1,552"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewPAFollows"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewPAPosts"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPAFollows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="128"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewPAFollowers"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/layoutPAHeaderContents">

                <ImageView
                    android:id="@+id/imageViewPAPhotos"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_photos"
                    app:layout_constraintEnd_toStartOf="@+id/imageViewPASaves"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageViewPASaves"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_saved"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageViewPAPhotos"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>